--- a/css.html
+++ b/css.html
@@ -1,12 +1,48 @@
 <!-- Bootstrap e íconos de Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+  crossorigin="anonymous"
+/>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"
+></script>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+/>
 
 <!-- Estilos del proyecto -->
 <style>
-header {
+  :root {
+    --color-azul-claro: #7fb3d5;
+    --color-azul-oscuro: #2874a6;
+    --color-verde-claro: #d4efdf;
+    --color-verde-oscuro: #239b56;
+    --color-rojo-claro: #ec7063;
+    --color-rojo-oscuro: #c0392b;
+    --color-amarillo-claro: #f9e79f;
+    --color-amarillo-oscuro: #d4ac0d;
+    --color-gris-claro: #e5e7e9;
+    --color-gris-oscuro: #515a5a;
+  }
+  
+  header {
     background-color: #eee;
-}
+  }
 
+  .icono-footer {
+    font-size: 1.5rem;
+    padding: 1rem;
+    transition: all 0.2s ease-in-out;
+    transform: scale(1);
+  }
+
+  .icono-footer:hover {
+    color: var(--color-azul-claro);
+    transform: scale(1.2);
+  }
 </style>
