notificacion tabla cargada conm exito agregada

--- a/css.html
+++ b/css.html
@@ -29,7 +29,7 @@
     --color-gris-claro: #e5e7e9;
     --color-gris-oscuro: #515a5a;
   }
-  
+
   header {
     background-color: #eee;
   }
@@ -44,5 +44,10 @@
   .icono-footer:hover {
     color: var(--color-azul-claro);
     transform: scale(1.2);
+  }
+
+  .icono-notificacion {
+    font-size: 1.5rem;
+    padding: 0.5rem;
   }
 </style>
