agregado borde oscuro a la tabla

--- a/js.html
+++ b/js.html
@@ -51,7 +51,8 @@
       "table",
       "table-striped",
       "border",
-      "border-3",
+      "border-4",
+      "border-dark",
       "table-success"
     );
 
